--- a/ihtml/static-content/styles.css
+++ b/ihtml/static-content/styles.css
@@ -34,6 +34,11 @@ span.jstExpand, span.jstFold {
   display: none;
 }
 
+.divider {
+    width: 5px;
+    height: 5px;
+}
+
 /* jsontree.css */
 
 .jstValue {
